tests/struct_field_defaults_forward_ref_bad.stderr
tests/struct_field_defaults_forward_ref_bad.sl:3:10: error: SL2045: field default references later field 'b'
