tests/struct_field_defaults_forward_ref_bad.sl
struct Bad {
    a i32 = b
    b i32
}
